<resources>
    <string name="app_name">Personal Project</string>
    <string name="max_score">Max score: 0</string>
    <string name="start_game">Start game</string>
    <string name="game">Personal Project</string>
    <string name="current_score">Current score:</string>
    <string name="score">0</string>
    <string name="gameover">Game over!</string>
    <string name="current_health">Lives:</string>
    <string name="health">3</string>
    <string name="current_fuel">Fuel:</string>
    <string name="fuel">5000</string>
    <string name="title_activity_game_finished">GameFinishedActivity</string>
    <string name="backtomenu">Back to menu</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
</resources>